<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.hicoincom</groupId>
  <artifactId>waas-sdk</artifactId>
  <packaging>jar</packaging>
  <version>1.1.0</version>

  <name>waas-sdk</name>
  <description>chainup waas client sdk</description>
  <url>https://waas.chainup.com/</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>chainup</name>
      <email>admin@chainup.com</email>
    </developer>
  </developers>

  <!-- Code library -->
  <scm>
    <url>https://github.com/HiCoinCom/java-sdk</url>
  </scm>

  <profiles>
    <profile>
      <!-- This id is the -P parameter when packaging -->
      <id>release</id>
      <build>
        <plugins>
          <!-- Source plugin-->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <!-- Javadoc plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
       </plugins>
      </build>
      <distributionManagement>
        <snapshotRepository>
          <!--- The id here needs to be consistent with the id of the service configured in setting.xml -->
          <id>github</id>
          <url>https://maven.pkg.github.com/HiCoinCom/java-sdk</url>
        </snapshotRepository>
        <repository>
          <id>github</id>
          <url>https://maven.pkg.github.com/HiCoinCom/java-sdk</url>
        </repository>

      </distributionManagement>

    </profile>
  </profiles>


  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.7.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.30</version>
    </dependency>

    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>fastjson</artifactId>
      <version>1.2.83</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.12.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.13</version>
    </dependency>

    <dependency>
      <groupId>org.apache.directory.studio</groupId>
      <artifactId>org.apache.commons.codec</artifactId>
      <version>1.8</version>
    </dependency>

  </dependencies>

  <build>
    <finalName>waas-sdk</finalName>
    <defaultGoal>compile</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>3.0.1</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <source>1.8</source>
          <target>1.8</target>
          <debug>true</debug>
          <optimize>true</optimize>
        </configuration>
      </plugin>
   </plugins>
  </build>
</project>
